# joy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FIXES_FOR_PARALLEL.md  MODERNIZATION.md  PARALLEL.md  PROJECT_REVIEW.md  README.md  REVIEW.md  TODO.md  appveyor.yml  globals.h  makefile  setraw.c
.github/workflows/: cmake.yml
doc/: architecture.md  contiguous_matrix_exploration.md  parallel.md  parallel_performance.md  persistent_joy_design.md  persistent_session_design.md  persistent_session_impl.md  plugin_api_design.md  sqlite_design.md  vector.md  vector_impl.md
examples/: CMakeLists.txt  embed_custom_io.c  embed_simple.c
ext/linenoise/syntax/: joy.c  joy.h
ext/tree-sitter-joy/: parser.c
include/: gc.h  globals.h  khash.h  khashl.h  kvec.h  macros.h  parallel.h  runtime.h
include/internal/: env_types.h
include/joy/: joy.h
lib/: CMakeLists.txt  grmlib.joy  mapreduce.joy
src/: error.c  factor.c  gc.c  interp.c  iolib.c  joy.c  main.c  module.c  optable.c  print.c  repl.c  scan.c  setraw.c  symbol.c  undefs.c  utils.c  write.c
src/builtin/: __dump.c  __latex_manual.c  __memorymax.c  __settracegc.c  abort.c  abs.c  aggregate.c  all.c  andorxor.h  app12.c  app2.c  app3.c  app4.c  arithmetic.c  assign.c  at.c  atan2.c  autoput.c  bfloat.h  boolean.c  boolean.h  builtin_macros.h  combinators.c  compare.h  comparison.c  comprel.h  comprel2.h  concat.c  cond.c  condnestrec.c  config.c  cons_swons.h  construct.c  control.c  conts.c  cos.c  decode.h  dict.c  dipped.h  echo.c  (+96 more)
src/builtin/individual/: __html_manual.c  __manual_list.c  __memoryindex.c  __memorymax.c  __settracegc.c  __symtabindex.c  __symtabmax.c  abort.c  acos.c  and.c  app1.c  argc.c  argv.c  asin.c  atan.c  autoput.c  binrec.c  branch.c  case.c  casting.c  ceil.c  char.c  choice.c  chr.c  cleave.c  clock.c  cond.c  condnestrec.c  cons.c  construct.c  cosh.c  dip.c  divide.c  drop.c  dupd.c  echo.c  enconcat.c  equal.c  ferror.c  fgetch.c  (+78 more)
src/cli/: main.c
test2/: CMakeLists.txt
test4/: CMakeLists.txt
tests/: blas_benchmark.joy  mapreduce_test.joy  native_benchmark.joy  parallel_benchmark.joy  parallel_benchmark.sh  parallel_stress.joy  parallel_test.joy  sequential_benchmark.joy  vector_benchmark.joy  wordcount_test.joy
tests/test2/: CMakeLists.txt  __html_manual.out  __latex_manual.out  __manual_list.out  _help.out  acos.out  all2.out  asin.out  atan.out  cases.joy  compare.out  dict.joy  eql.out  eql2.out  equal.out  fgets.out  filetime.out  fopen.out  fput.out  getenv.out  gmtime.out  help.out  helpdetail.out  json.joy  ldexp.out  let.joy  localtime.out  manual.out  match.joy  matrix.joy  put.out  rand.out  setecho.out  srand.out  strftime.out  strinterp.joy  system.out  time.out  times.out  unary.out  (+4 more)
tests/test4/: CMakeLists.txt  api.c  factor.joy  factor.out  forget.out  gcno.out  interp.out  main2.out  main3.out  main6.out  scan1.out  scan2.out  utils1.out
tools/: gen_builtins.py  gen_table.py  run_clang_tidy.py  run_crash_test.sh  run_test.sh
tree-sitter-joy/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-joy/bindings/c/: tree-sitter-joy.pc.in
tree-sitter-joy/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-joy/bindings/node/: binding.cc  index.js
tree-sitter-joy/bindings/python/tree_sitter_joy/: __init__.py  binding.c
tree-sitter-joy/bindings/rust/: build.rs  lib.rs
tree-sitter-joy/bindings/swift/TreeSitterJoy/: joy.h
tree-sitter-joy/queries/: highlights.scm  locals.scm
tree-sitter-joy/src/: grammar.json  node-types.json  scanner.c
tree-sitter-joy/test/corpus/: comments.txt  definitions.txt  library.txt  literals.txt  native_types.txt  quotations.txt
